# omega

./: CMakeLists.txt  dumpshit.txt
src/: entity.c  entity.h  game.c  game.h  main.c  manager.c  manager.h  shopRoom.c  shopRoom.h  tilemap.c  tilemap.h
